tests/src/frontend/typechecking/invalid/type_const_default4.sk
base class Foo {
  type T;
}

base class Bar extends Foo {
  type T: Test.MixedScalar;
}

base class Baz extends Bar {
  type T;
}
